--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "mobx": "^5.15.7",
     "mobx-react": "^6.3.0",
     "react": "^16.13.1",
+    "react-back-to-top-button": "0.0.14",
     "react-dom": "^16.13.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.3",
